feat: ui select box

--- a/libs/ui/select-box/src/lib/select-box/select-box.html
+++ b/libs/ui/select-box/src/lib/select-box/select-box.html
@@ -1,1 +1,80 @@
-<p>SelectBox works!</p>
+<div class="select-box-container" [class.is-open]="isOpen()" [class.is-disabled]="disabled()"
+    [class.has-value]="!!selectedItem()" #trigger="cdkOverlayOrigin" #triggerContainer cdkOverlayOrigin
+    (click)="toggleDropdown()">
+
+    <div class="select-box-input-wrapper">
+        <div class="select-box-content">
+            @if (selectedItem()) {
+            @if (fieldTemplate()) {
+            <ng-container *ngTemplateOutlet="fieldTemplate()!; context: { $implicit: selectedItem() }"></ng-container>
+            } @else {
+            <span class="selected-text">{{ getDisplayText(selectedItem()) }}</span>
+            }
+            } @else {
+            <span class="placeholder">{{ placeholder() }}</span>
+            }
+        </div>
+
+        <div class="select-box-actions">
+            @if (clearable() && selectedItem() && !disabled()) {
+            <div class="action-btn clear-btn" (click)="clearValue($event)">
+                <i-lucide [img]="XIcon" [size]="16"></i-lucide>
+            </div>
+            }
+            <div class="action-btn dropdown-btn">
+                <i-lucide [img]="ChevronDownIcon" [size]="18" [class.rotated]="isOpen()"></i-lucide>
+            </div>
+        </div>
+    </div>
+</div>
+
+<ng-template cdkConnectedOverlay [cdkConnectedOverlayOrigin]="trigger" [cdkConnectedOverlayOpen]="isOpen()"
+    [cdkConnectedOverlayPositions]="overlayPositions" [cdkConnectedOverlayWidth]="overlayWidth"
+    [cdkConnectedOverlayScrollStrategy]="scrollStrategy()" (overlayOutsideClick)="closeDropdown()"
+    (detach)="closeDropdown()">
+
+    <div class="select-box-dropdown" (keydown)="handleKeydown($event)">
+        @if (searchEnabled()) {
+        <div class="search-container">
+            <i-lucide [img]="SearchIcon" [size]="16" class="search-icon"></i-lucide>
+            <input #searchInput type="text" class="search-input" [placeholder]="searchPlaceholder()"
+                (input)="handleSearch($event)" (keydown)="handleSearchKeydown($event)" />
+        </div>
+        }
+
+        <div class="list-container">
+            @if (loading() && items().length === 0) {
+            <div class="loading-state">
+                <div class="spinner"></div>
+                <span>Loading...</span>
+            </div>
+            } @else if (items().length === 0 && !loading()) {
+            <div class="no-data-state">
+                <span>No data found</span>
+            </div>
+            }
+
+            <cdk-virtual-scroll-viewport [itemSize]="36" [minBufferPx]="200" [maxBufferPx]="400"
+                [style.height.px]="viewportHeight" class="viewport" (scrolledIndexChange)="onScrollIndexChange($event)">
+
+                <div *cdkVirtualFor="let item of items(); let i = index; trackBy: trackById" class="list-item"
+                    [class.is-selected]="isSelected(item)" [class.is-focused]="focusedIndex() === i"
+                    (click)="selectItem(item)">
+                    @if (itemTemplate()) {
+                    <ng-container
+                        *ngTemplateOutlet="itemTemplate()!; context: { $implicit: item, index: i }"></ng-container>
+                    } @else {
+                    {{ getDisplayText(item) }}
+                    }
+                </div>
+
+                @if (loading() && items().length > 0) {
+                <div class="loading-more">
+                    <div class="spinner small"></div>
+                    <span>Loading more...</span>
+                </div>
+                }
+            </cdk-virtual-scroll-viewport>
+        </div>
+    </div>
+</ng-template>
